Added snapshot repository.

--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,12 @@
         </resources>
     </build>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <uniqueVersion>true</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
