--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,8 @@
     <groupId>io.axoniq</groupId>
     <artifactId>axon-server-api</artifactId>
     <version>4.0-SNAPSHOT</version>
+    <name>Axon Server API</name>
+    <description>Public API for communication with AxonServer</description>
 
     <prerequisites>
         <maven>3.0.0</maven>
@@ -48,7 +50,29 @@
         <connection>scm:git:https://github.com/AxonIQ/axon-server-api.git</connection>
         <developerConnection>scm:git:https://github.com/AxonIQ/axon-server-api.git</developerConnection>
         <url>https://github.com/AxonIQ/axon-server-api.git</url>
-    </scm>
+      <tag>HEAD</tag>
+  </scm>
+
+    <developers>
+        <developer>
+            <name>Allard Buijze</name>
+            <email>allard.buijze@axoniq.io</email>
+            <organization>AxonIQ</organization>
+            <organizationUrl>https://axoniq.io</organizationUrl>
+            <roles>
+                <role>Project Lead</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Marc Gathier</name>
+            <email>marc.gathier@axoniq.io</email>
+            <organization>AxonIQ</organization>
+            <organizationUrl>https://axoniq.io</organizationUrl>
+            <roles>
+                <role>Developer</role>
+            </roles>
+        </developer>
+    </developers>
 
 
     <profiles>
