--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,17 @@
                 <directory>src/main/proto</directory>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <mavenExecutorId>forked-path</mavenExecutorId>
+                    <localCheckout>true</localCheckout>
+                    <pushChanges>false</pushChanges>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <distributionManagement>
@@ -69,7 +80,6 @@
             </roles>
         </developer>
     </developers>
-
 
     <profiles>
         <profile>
