--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.axoniq</groupId>
     <artifactId>axon-server-api</artifactId>
-    <version>4.0-M2</version>
+    <version>4.0-M3-SNAPSHOT</version>
     <name>Axon Server API</name>
     <description>Public API for communication with AxonServer</description>
 
@@ -57,7 +57,7 @@
         <connection>scm:git:https://github.com/AxonIQ/axon-server-api.git</connection>
         <developerConnection>scm:git:https://github.com/AxonIQ/axon-server-api.git</developerConnection>
         <url>https://github.com/AxonIQ/axon-server-api.git</url>
-      <tag>axon-server-api-4.0-M2</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
