--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.axoniq</groupId>
     <artifactId>axon-server-api</artifactId>
-    <version>4.6.1-SNAPSHOT</version>
+    <version>4.6.1</version>
     <name>Axon Server API</name>
     <description>Public API for communication with AxonServer</description>
 
@@ -73,7 +73,7 @@
         <connection>scm:git:https://github.com/AxonIQ/axon-server-api.git</connection>
         <developerConnection>scm:git:https://github.com/AxonIQ/axon-server-api.git</developerConnection>
         <url>https://github.com/AxonIQ/axon-server-api.git</url>
-      <tag>axon-server-api-4.6.0</tag>
+      <tag>axon-server-api-4.6.1</tag>
   </scm>
 
     <developers>
