--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.axoniq</groupId>
     <artifactId>axon-server-api</artifactId>
-    <version>2025.1.2</version>
+    <version>2025.1.3-SNAPSHOT</version>
     <name>Axon Server API</name>
     <description>Public API for communication with AxonServer</description>
 
@@ -71,7 +71,7 @@
         <connection>scm:git:https://github.com/AxonIQ/axon-server-api.git</connection>
         <developerConnection>scm:git:https://github.com/AxonIQ/axon-server-api.git</developerConnection>
         <url>https://github.com/AxonIQ/axon-server-api.git</url>
-        <tag>axon-server-api-2025.1.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
